--- a/apiPhp/.htaccess
+++ b/apiPhp/.htaccess
@@ -3,7 +3,7 @@ RewriteEngine On # Activer le module Rewrite
 
 RewriteRule ^users+/(\d+)+/tasks/?$ api/tasks/read_all_tasks_of_user.php?user_id=$1
 RewriteRule ^users/?$ api/users/read.php [NC,L]
-RewriteRule ^users+/(\d+)$ api/users/read_single.php?id=$1
+RewriteRule ^users+/(\d+)$ api/users/read_delete_single.php?id=$1
 
 RewriteRule ^tasks/?$ api/tasks/read_and_create.php [NC,L]
 RewriteRule ^tasks+/(\d+)$ api/tasks/read_delete_single.php?id=$1
