--- a/apiPhp/.htaccess
+++ b/apiPhp/.htaccess
@@ -1,13 +1,14 @@
 #Endpoints
 RewriteEngine On # Activer le module Rewrite
 
+# Without this we would be blocked by CORS policy to call a localhost API from a localhost website
 <IfModule mod_headers.c>
     Header set Access-Control-Allow-Origin "*"
 </IfModule>
 
 
 RewriteRule ^users+/(\d+)+/tasks/?$ api/tasks/read_all_tasks_of_user.php?user_id=$1
-RewriteRule ^users/?$ api/users/read.php [NC,L]
+RewriteRule ^users/?$ api/users/read_and_create.php [NC,L]
 RewriteRule ^users+/(\d+)$ api/users/read_delete_single.php?id=$1
 
 RewriteRule ^tasks/?$ api/tasks/read_and_create.php [NC,L]
